--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,13 +5,14 @@ kotlin = "1.9.23"
 coroutines = "1.10.2"
 retrofit = "2.11.0"
 okhttp = "5.1.0"
-lifecycle = "2.9.2"
+lifecycle = "2.8.6"
 compose-bom = "2025.08.00"
 material = "1.12.0"
 appcompat = "1.7.1"
 constraintlayout = "2.2.1"
-core-ktx = "1.17.0"
+core-ktx = "1.15.0"
 activity-compose = "1.10.1"
+arch-testing = "2.2.0"
 
 junit = "4.13.2"
 mockito = "5.19.0"
@@ -65,8 +66,6 @@ junit = { module = "junit:junit", version.ref = "junit" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockito-kotlin" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
-androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "lifecycle" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "arch-testing" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso" }
-
-
