--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,25 @@ jobs:
       # TESTS
       - name: Run unit tests
         run: ./gradlew test
+
+        # Build solo si los tests anteriores pasan
+      - name: Build debug APK
+        run: ./gradlew assembleDebug
+
+      - name: Build release APK
+        run: ./gradlew assembleRelease
+
+      - name: Upload debug APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug-apk-${{ github.sha }}
+          path: app/build/outputs/apk/debug/app-debug.apk
+          retention-days: 7
+
+      - name: Upload release APK (unsigned if no signing config)
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-release-apk-${{ github.sha }}
+          path: app/build/outputs/apk/release/*.apk
+          retention-days: 7
+        run: ./gradlew test
