--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,13 @@ jobs:
       - name: Upload debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: app-debug-apk-${{ github.sha }}
+          name: gopetalk-debug-apk-${{ github.sha }}
           path: app/build/outputs/apk/debug/app-debug.apk
           retention-days: 7
 
       - name: Upload release APK (unsigned if no signing config)
         uses: actions/upload-artifact@v4
         with:
-          name: app-release-apk-${{ github.sha }}
+          name: gopetalk-release-apk-${{ github.sha }}
           path: app/build/outputs/apk/release/*.apk
           retention-days: 7
